--- a/SIGOFCv3/Areas/Supervision/Views/ManInformeExSitu/AddEditExSitu.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInformeExSitu/AddEditExSitu.cshtml
@@ -1614,7 +1614,7 @@
                                     <div class="card-header text-small"></div>
                                     <div class="card-body">
                                         <div class="form-row">
-                                            <div class="form-group col-md-2">
+                                            @*<div class="form-group col-md-2">
                                                 <label for="ddlOdId" class="text-small">Se recomienda mandato:</label><br />
                                                 <div class="custom-control custom-radio custom-control-inline">
                                                     @Html.RadioButton("chkRecomendar", 1, Model.chkRecomendar, new { @class = "custom-control-input", id = "rdbRecomendarSi" })
@@ -1628,7 +1628,7 @@
                                             <div class="form-group col-md-2">
                                                 <label for="txtObsPublicar" class="text-small">Número de Mandatos:</label>
                                                 @Html.TextBoxFor(m => m.txtMandatos, new { @class = "form-control form-control-sm", maxlength = "150" })
-                                            </div>
+                                            </div>*@
                                         </div>
                                         <div class="form-row">
                                             <div class="form-group col-md-12">
