--- a/SIGOFCv3/Areas/Supervision/Views/ManInformeMedidaCorrectiva/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInformeMedidaCorrectiva/AddEdit.cshtml
@@ -63,7 +63,7 @@
                                 </div>
                                 <div class="form-row">
                                     <div class="form-group col-md-5">
-                                        <label for="lblItemEtiNContrato" class="text-small">Número de informe técnico</label>
+                                        <label for="lblItemEtiNContrato" class="text-small">Número de informe</label>
                                         @Html.EditorFor(m => m.txtItemNumero, new { htmlAttributes = new { @class = "form-control form-control-sm" } })
                                     </div>
                                 </div>
